# gladly-jupyter

./: .gitignore  LICENSE  README.md  _config.yml  pyproject.toml
docs/: Architecture.md  Data.md  Linking.md  Plot.md  PlotGroup.md  Registries.md
examples/: Scatter.ipynb
examples/.ipynb_checkpoints/: Scatter-checkpoint.ipynb
gladly_jupyter/: __init__.py  kernel_server.py  pint_support.py  server_extension.py  widget.py
gladly_jupyter/static/: widget.js
jupyter-config/jupyter_server_config.d/: gladly_jupyter.json
