[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gladly-jupyter"
version = "0.0.1"
description = "Jupyter widget for Gladly GPU-accelerated plotting"
requires-python = ">=3.8"
dependencies = [
    "anywidget>=0.9.0",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
pint = ["pint", "pint-pandas"]

[tool.hatch.build.targets.wheel]
packages = ["gladly_jupyter"]
